@@ -1,6 +1,7 @@
 package ru.yandex.practicum.filmrate.controller;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmrate.exception.ControllerValidationException;
 import ru.yandex.practicum.filmrate.model.User;
@@ -12,18 +13,19 @@ import java.util.HashMap;
 import java.util.Map;
 
 @RestController
+@RequestMapping("/users")
 @Slf4j
 public class UserController {
     private int id = 0;
     private final Map<Integer, User> users = new HashMap<>();
 
-    @GetMapping("/users")
+    @GetMapping
     public Collection<User> findAllUsers() {
         log.info("Список пользователей получен.");
         return users.values();
     }
 
-    @PostMapping("/users")
+    @PostMapping
     public User addUser(@Valid @RequestBody User user) {
         if (!users.containsKey(user.getId())) {
             validateUser(user);
@@ -34,7 +36,7 @@ public class UserController {
         return user;
     }
 
-    @PutMapping("/users")
+    @PutMapping
     public User updateOrAddUser(@Valid @RequestBody User user) {
         if (!users.containsKey(user.getId())) {
             log.warn("Указан несуществующий ID={}", user.getId());
@@ -51,23 +53,23 @@ public class UserController {
     }
 
     private void validateUser(User user) {
-        if (user.getEmail() == null || user.getEmail().isBlank() || !user.getEmail().contains("@")) {
+        if (StringUtils.isBlank(user.getEmail()) || StringUtils.containsNone(user.getEmail(), "@")) {
             log.warn("Указан неверный формат email, указан email={}.", user.getEmail());
             throw new ControllerValidationException("Указан неверный email.");
         }
 
-        if (user.getBirthday().isAfter(LocalDate.now())) {
+        if (user.getBirthday() != null && user.getBirthday().isAfter(LocalDate.now())) {
             log.warn("Дата рождения не может быть в будущем. Сейчас {}, указанная дата {}", LocalDate.now(),
                     user.getBirthday());
             throw new ControllerValidationException("Указана неверная дата рождения");
         }
 
-        if (user.getLogin() == null || user.getLogin().contains(" ") || user.getLogin().isBlank()) {
+        if (StringUtils.isBlank(user.getLogin()) || StringUtils.containsWhitespace(user.getLogin())) {
             log.warn("Логин не может содержать пробелы или быть пустым, указанный логин={}.", user.getLogin());
             throw new ControllerValidationException("Указан неверный логин.");
         }
 
-        if (user.getName() == null || user.getName().isBlank()) {
+        if (StringUtils.isBlank(user.getName())) {
             log.debug("Имя не установлено, имя взято из логина. Установлено имя={} ", user.getLogin());
             user.setName(user.getLogin());
         }
